# llm-fine-tuning

./: .gitignore  .wakatime-project  Dockerfile  README.md  docker-compose.yml  evaluate.py  main.py  pyproject.toml
configs/: default.yaml
docs/: .wakatime-project  01_Introduction.md  02_Model_Pretraining.md  Introduction.md  Readme.md
notebooks/: Transfer_Learning_and_model_fine_tuning.ipynb  tutorial.ipynb
tests/: test_main.py
