[project]
name = "llm-fine-tuning"
version = "0.1.0"
description = "A comprehensive toolkit for fine-tuning Large Language Models using Hugging Face Transformers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.10.0",
    "peft>=0.4.0",
    "accelerate>=0.20.0",
    "bitsandbytes>=0.41.0",
    "wandb>=0.15.0",
    "jupyter>=1.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
]
